--- a/navbar-3/index.html
+++ b/navbar-3/index.html
@@ -4,6 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Navbar with HTML & CSS</title>
+    <!-- main stylesheet -->
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <nav>
+      <label class="logo">Company</label>
+
+      <input type="checkbox" id="nav_check" />
+      <label for="nav_check" class="check_button"> &#9776; </label>
+      <ul>
+        <li><a class="active" href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="#">Feedback</a></li>
+      </ul>
+    </nav>
+  </body>
 </html>
