updated structure & styles for navbar 4

--- a/navbar-4/index.html
+++ b/navbar-4/index.html
@@ -4,18 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Navbar</title>
-    <!-- main stylesheet -->
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <nav>
+      <!-- Shared logo for both mobile and desktop -->
+      <a href="#" class="logo">Company</a>
+
       <div class="nav_header">
-        <a href="#" class="logo">Company</a>
-
-        <label for="nav_check" class="hamburger_icon">&#9776; </label>
+        <label for="nav_check" class="hamburger_icon">&#9776;</label>
       </div>
-
-      <a href="#" class="logo nav_header--lg">Company</a>
 
       <input type="checkbox" id="nav_check" />
       <ul>
